terminado listo para presentar

--- a/Celulares/Project1/src/app/VentanaPrincipal.form
+++ b/Celulares/Project1/src/app/VentanaPrincipal.form
@@ -6,7 +6,7 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de clientes"/>
+            <Property name="text" type="java.lang.String" value="Clientes"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -48,7 +48,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de celulares"/>
+            <Property name="text" type="java.lang.String" value="Dispositivos"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -98,7 +98,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de t&#xe9;cnicos"/>
+            <Property name="text" type="java.lang.String" value="T&#xe9;cnicos"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -140,7 +140,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Estados del dispositivo"/>
+            <Property name="text" type="java.lang.String" value="Estados"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -203,7 +203,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Programa de Federico"/>
+    <Property name="title" type="java.lang.String" value="Programa de Federico - Gesti&#xf3;n de dispositivos"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[660, 520]"/>
     </Property>
